--- a/spring-petclinic-client/pom.xml
+++ b/spring-petclinic-client/pom.xml
@@ -55,6 +55,13 @@
 						<goals>
 							<goal>bower</goal>
 						</goals>
+						<configuration>
+        						<!-- optional: The default argument is actually
+        						"install", so unless you need to run some other bower command,
+        						you can remove this whole <configuration> section.
+        						-->
+        						<arguments>install --allow-root</arguments>
+    						</configuration>
 					</execution>
 					<execution>
 						<id>gulp build</id>
