--- a/spring-petclinic-server/pom.xml
+++ b/spring-petclinic-server/pom.xml
@@ -58,10 +58,17 @@
             <artifactId>spring-petclinic-client</artifactId>
         </dependency>
 
-        <dependency>
+        <!-- <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <scope>runtime</scope>
+        </dependency> -->
+	
+	<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.5</version>
+	    <scope>runtime</scope>
         </dependency>
 
         <dependency>
