--- a/spring-petclinic-server/src/main/resources/application.properties
+++ b/spring-petclinic-server/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 # database init, supports mysql too
-petclinic.database=hsqldb
+petclinic.database=mysql
 spring.datasource.schema=classpath*:db/${petclinic.database}/schema.sql
 spring.datasource.data=classpath*:db/${petclinic.database}/data.sql
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/petclinic
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # JPA
 spring.jpa.hibernate.ddl-auto=none
